--- a/DBS_Foundation_Camp_Submission_2_Wahyu_Dhia_Satwika.ipynb
+++ b/DBS_Foundation_Camp_Submission_2_Wahyu_Dhia_Satwika.ipynb
@@ -2390,7 +2390,7 @@
    },
    "source": [
     "# Data Preparation\n",
-    " Pada tahap ini dilakukan untuk mempersiapkan data sebelum dilakukan pemodelan. Pada proyek kali ini, akan digunakan Content Based Filtering dan Collaborative Filtering. Sebelum masuk ke dalam preparation untuk setiap filtering, maka perlu dicek terlebih dahulu data yang akan digunakan."
+    " Pada tahap ini dilakukan untuk mempersiapkan data sebelum dilakukan pemodelan. Pada proyek kali ini, akan digunakan Content Based Filtering dan Collaborative Filtering. Sebelum masuk ke dalam preparation untuk setiap filtering, maka perlu dicek terlebih dahulu data yang akan digunakan. Karena dataset tidak terdapat missing value dan duplicate maka bisa langungsung ke analisis data yang diperlukan seperti unique genres."
    ]
   },
   {
@@ -2425,7 +2425,9 @@
     "id": "GUJGu1ZETs0M"
    },
    "source": [
-    "Dikarenakan terdapat data (no genre listed), maka lebih baik dihapus karena akan mengganggu saat pemodelan nanti."
+    "### Delete Unnecessary Values\n",
+    "\n",
+    "Jika dilihat pada data_movies['genres] terdapat data (no genre listed), maka lebih baik dihapus dikarena data tersebut tidak memiliki insight yang jelas dan akan mengganggu saat pemodelan nanti. "
    ]
   },
   {
@@ -2466,6 +2468,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sehingga hasil yang baru setelah dihapus, dimasukkan ke dalam variable data_movies_cleaned seperti di atas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "f7ppOYK3Qt0T"
    },
@@ -2489,7 +2498,8 @@
     "id": "ktftOom0J6ju"
    },
    "source": [
-    "**Mengubah data menjadi bentuk list**"
+    "### Mengubah data menjadi bentuk list\n",
+    "Pada tahap ini, mengubah data yang sebelumnya dari dataframe di suatu kolom menjadi suatu list menggunakan `tolist()`"
    ]
   },
   {
@@ -2531,9 +2541,9 @@
     "id": "ZTUBhhOaKUOA"
    },
    "source": [
-    "**Membuat DataFrame baru**\n",
+    "### Membuat DataFrame baru\n",
     "\n",
-    "Pada DataFrame ini dibuat"
+    "Setelah itu, data yang sudah menjadi bentuk list dimasukkan menjadi Dataframe baru yang bernama content_based"
    ]
   },
   {
@@ -2967,7 +2977,7 @@
     "id": "OfB6_2O1UfXZ"
    },
    "source": [
-    "### TF-IDF"
+    "### Ekstraski TF-IDF"
    ]
   },
   {
@@ -2976,7 +2986,7 @@
     "id": "KHzp7T_9LHzo"
    },
    "source": [
-    "Dikarenakan komputer hanya bisa memroses berupa numerik maka diperlukan mengubah data dari string menjadi numerik dengen TFidfVectorizer. Dilakukan konversi untuk kolom genres agar dapat diproses untuk pemodelan nanti."
+    "Ekstraksi TF-IDF adalah teknik dalam pemrosesan bahasa alami (Natural Language Processing, NLP) yang digunakan untuk mengukur seberapa penting sebuah kata dalam suatu koleksi dokumen. Dikarenakan komputer hanya bisa memroses berupa numerik maka diperlukan mengubah data dari string menjadi numerik dengan `TFidfVectorizer`. Dilakukan konversi untuk kolom genres agar dapat diproses untuk pemodelan nanti."
    ]
   },
   {
@@ -3012,15 +3022,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jlMEbq5VMT-2"
-   },
-   "source": [
-    "Dilakukan transformasi ke dalam bentuk matriks"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -3051,10 +3052,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "sKz9tQRPMlW6"
+    "id": "jlMEbq5VMT-2"
    },
    "source": [
-    "Mengubah vektor tf-idf ke dalam bentuk matriks dengan fungsi todense()"
+    "### Transformasi Matrix\n",
+    "\n",
+    "Data yang sudah diolah menggunakan `TfidfVectorizer()` akan dilakukan transformasi ke dalam bentuk matriks. Setelah itu, vektor tf-idf diubah ke dalam bentuk matriks dengan fungsi todense()"
    ]
   },
   {
@@ -3761,7 +3764,7 @@
     "id": "_29AM-tHPXwy"
    },
    "source": [
-    "Untuk Collaborative Filtering akan digunakan userId, movieId, dan Rating."
+    "Collaborative filtering fokus pada mengidentifikasi pengguna dengan preferensi serupa dan menghasilkan rekomendasi berdasarkan preferensi pengguna-pengguna. Untuk Collaborative Filtering akan digunakan userId, movieId, dan Rating."
    ]
   },
   {
@@ -3770,7 +3773,9 @@
     "id": "VYY4UjWzQptX"
    },
    "source": [
-    "Dilakukan encode untuk user id agar menjadi bentuk list."
+    "### Encoding\n",
+    "\n",
+    "Encoding adalah proses mengonversi data kategorikal (userId) menjadi angka (nilai numerik). Dilakukan encode untuk user id agar menjadi bentuk list."
    ]
   },
   {
@@ -3811,7 +3816,7 @@
     "id": "O4Ov8yo0Qo8B"
    },
    "source": [
-    "Dilakukan encode untuk movie id agar menjadi bentuk list."
+    "Dilakukan juga encoding untuk movie id agar menjadi bentuk list."
    ]
   },
   {
@@ -3825,6 +3830,13 @@
     "movie_id = data_movies['movieId'].unique().tolist()\n",
     "movie_to_movie_encoded = {x: i for i, x in enumerate(movie_id)}\n",
     "movie_encoded_to_movie = {i: x for i, x in enumerate(movie_id)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kolom movieId dan userId yang awalnya berisi ID kategorikal diubah menjadi bentuk numerik. Proses ini dilakukan dengan menggunakan fungsi map(), yang menggantikan nilai-nilai dalam kolom tersebut dengan angka-angka hasil encoding yang telah dipersiapkan sebelumnya dalam dictionary movie_to_movie_encoded dan user_to_user_encoded."
    ]
   },
   {
@@ -3865,6 +3877,13 @@
     "\n",
     "num_movies = len(movie_encoded_to_movie)\n",
     "print(num_movies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selanjutnya mengubah data_rating menjadi float32 agar dapat dilihat statistik seperti data minimum dan maksimal"
    ]
   },
   {
@@ -4351,6 +4370,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Shuffle Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "cXGvi2USSTke"
    },
@@ -4772,7 +4798,9 @@
     "id": "IRhrZCv1SdBM"
    },
    "source": [
-    "Data dibagi menjadi 80% train dan 20% test"
+    "### Train-Test Split Data\n",
+    "\n",
+    "Setelah dilakukan encoding maka selanjutnya dataset perlu dibagi menjadi 80% train dan 20% test. Untuk X akan menyimpan feature yang akan dipakai dan y akan menyimpan nilai rating yang telah dinormalisasi."
    ]
   },
   {
@@ -6030,6 +6058,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Content-Based Filtering\n",
+    "\n",
+    "\n",
+    "### Precision\n",
+    "Untuk content-based filtering, digunakan metrik evaluasi precision untuk melihat seberapa baik sistem rekomendasi menggunakan cosine-simiilarity. Precision adalah salah satu metrik evaluasi yang digunakan untuk mengukur keakuratan prediksi. Precision memberikan gambaran seberapa banyak dari prediksi yang dikategorikan positif benar-benar merupakan kasus positif yang sebenarnya.\n",
+    "\n",
+    "$$ Precision = \\frac{TP}{TP + FP} $$\n",
+    "\n",
+    "Dimana:\n",
+    "\n",
+    "- TP (*True Positive*), jumlah kejadian positif yang diprediksi dengan benar.\n",
+    "- FP (*False Positive*), jumlah kejadian positif yang diprediksi dengan salah.\n",
+    "\n",
+    "Dikarenakan pada saat menguji model untuk film `Jumanji` dengan genre `Adventure|Children|Fantasy`. Dapat dilihat rekomendasi yang dihasilkan mengeluarkan Top-10 film dengan genre yang serupa yaitu `Adventure|Children|Fantasy` sehingga precision yang didapat adalah `10/10`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collaborative Filtering\n",
+    "\n",
+    "### RMSE\n",
+    "\n",
+    "Evaluasi metrik digunakan untuk mengukur performa model RecommenderNet adalah metrik RMSE (Root Mean Squared Error). RMSE mengukur selisih antara nilai yang diprediksi oleh model dengan nilai yang sebenarnya (nilai yang diobservasi). RMSE memberikan gambaran tentang seberapa besar kesalahan yang dilakukan model dalam satuan yang sama dengan data asli.\n",
+    "\n",
+    "$$ RMSE =  \\sqrt{\\frac{\\sum_{t=1}^{n}(A_t - F_t)^2}{n}} $$\n",
+    "\n",
+    "Dimana:\n",
+    "\n",
+    "- $A_t$ : Nilai aktual\n",
+    "- $F_t$ : Nilai hasil prediksi\n",
+    "- n: Banyak data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hasil training Collaborative Filtering dengan RecommenderNet dapat divisualisasikan sebagai berikut:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -6073,7 +6147,18 @@
     "id": "4ytwgSXDzNTN"
    },
    "source": [
-    "Pada hasil evaluasi dapat dilihat untuk akurasi training rmse terus menurun hingga epoch 20. Namun untuk validation rmse, penurunan terhenti pada epoch 10 dan terjadi naik turun untuk hasilnya."
+    "Pada hasil evaluasi dapat dilihat untuk akurasi training rmse terus menurun hingga epoch 20. Namun untuk validation rmse, penurunan terhenti pada epoch 10 dan terjadi naik turun untuk hasilnya. Dikarenakan RMSE sudah mencapai 0.1727 sehingga dapat dikatakan model sudah cukup baik sebagai sistem rekomendasi. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kesimpulan\n",
+    "\n",
+    "Berdasarkan hasil evaluasi, sistem rekomendasi film dengan pendekatan Content-Based Filtering menggunakan Cosine Similarity berhasil mencapai precision 10/10, memberikan rekomendasi yang sangat relevan berdasarkan kesamaan genre. Sementara itu, pendekatan Collaborative Filtering dengan model RecommenderNet menghasilkan RMSE sebesar 0.1727, menunjukkan kemampuan model dalam memprediksi preferensi pengguna dengan tingkat kesalahan yang rendah. Kedua pendekatan ini efektif dalam menyediakan rekomendasi film yang sesuai dengan preferensi genre dan pola rating pengguna.\n",
+    "\n",
+    "Sehingga dapat disimpulkan, bahwa kedua pendekatan ini dapat dikatakan berhasil memenuhi tujuan dari dibuatnya projek ini dimana model dapat memprediksi film berdasarkan genrenya menggunakan content-based filtering dan rating untuk collaborative filtering."
    ]
   }
  ],
