--- a/DBS_Foundation_Camp_Submission_2_Wahyu_Dhia_Satwika.ipynb
+++ b/DBS_Foundation_Camp_Submission_2_Wahyu_Dhia_Satwika.ipynb
@@ -3773,7 +3773,7 @@
     "id": "VYY4UjWzQptX"
    },
    "source": [
-    "### Encoding\n",
+    "### Encode Data\n",
     "\n",
     "Encoding adalah proses mengonversi data kategorikal (userId) menjadi angka (nilai numerik). Dilakukan encode untuk user id agar menjadi bentuk list."
    ]
